hubSide/force-app/main/default/objects/Facture__c/Facture__c.object-meta.xml
<CustomObject>
    <description>Historique par période du nombre de jour consommé et des dépassements occasionnels. Justification historique facture client</description>
    <label>Consommation</label>
    <nameField>
        <displayFormat>FAC-{00000000}</displayFormat>
        <label>Facture Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consommations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>