hubSide/force-app/main/default/objects/Facture__c/fields/Contrat__c.field-meta.xml
<CustomField>
    <fullName>Contrat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contrat lié à la facture en cours</description>
    <label>Contrat</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Asset.RecordTypeId</field>
            <operation>equals</operation>
            <value>Contrat location</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Consommations</relationshipLabel>
    <relationshipName>Consommations</relationshipName>
    <type>Lookup</type>
</CustomField>