hubSide/force-app/main/default/objects/Facture__c/fields/Contrat_actif__c.field-meta.xml
<CustomField>
    <fullName>Contrat_actif__c</fullName>
    <formula>IF(
    ISNULL(Contrat__r.Date_cloture__c), 
    TRUE, 
    Contrat__r.Date_cloture__c &gt; TODAY()
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contrat actif ?</label>
    <type>Checkbox</type>
</CustomField>