hubSide/force-app/main/default/objects/Facture__c/fields/Date_debut_periode__c.field-meta.xml
<CustomField>
    <fullName>Date_debut_periode__c</fullName>
    <description>Date de début de période, initialisant les compteurs à 0.</description>
    <label>Date de début de période</label>
    <type>Date</type>
</CustomField>