hubSide/force-app/main/default/objects/Facture__c/fields/Date_facturation_BApli__c.field-meta.xml
<CustomField>
    <fullName>Date_facturation_BApli__c</fullName>
    <description>Date de facturation dans B-Apli</description>
    <label>Date de facturation B-Apli</label>
    <type>Date</type>
</CustomField>