hubSide/force-app/main/default/objects/Facture__c/fields/Date_fin_periode__c.field-meta.xml
<CustomField>
    <fullName>Date_fin_periode__c</fullName>
    <label>Date de fin de période</label>
    <type>Date</type>
</CustomField>