hubSide/force-app/main/default/objects/Facture__c/fields/Date_saisie_BApli__c.field-meta.xml
<CustomField>
    <fullName>Date_saisie_BApli__c</fullName>
    <description>Date de saisie dans B-Apli</description>
    <label>Date de saisie dans B-Apli</label>
    <type>Date</type>
</CustomField>