hubSide/force-app/main/default/objects/Facture__c/fields/Employe_facture__c.field-meta.xml
<CustomField>
    <fullName>Employe_facture__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Employé ayant saisi la facture</description>
    <label>Employé ayant saisi la facture</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Factures_EmployeSaisie</relationshipName>
    <type>Lookup</type>
</CustomField>