hubSide/force-app/main/default/objects/Facture__c/fields/Facture_active__c.field-meta.xml
<CustomField>
    <fullName>Facture_active__c</fullName>
    <formula>AND(
    OR(
        Date_debut_periode__c &lt; TODAY(), 
        TODAY() == Date_debut_periode__c
    ), 
    OR(
        TODAY() &lt; Date_fin_periode__c, 
        TODAY() == Date_fin_periode__c
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Periode en cours</label>
    <type>Checkbox</type>
</CustomField>