hubSide/force-app/main/default/objects/Facture__c/fields/Montant_facture__c.field-meta.xml
<CustomField>
    <fullName>Montant_facture__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Montant total facturé sur la période</description>
    <label>Montant facturé</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>