hubSide/force-app/main/default/objects/Facture__c/fields/Nombre_jours_consommes__c.field-meta.xml
<CustomField>
    <fullName>Nombre_jours_consommes__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Nombre total de jours consommés dans la période</description>
    <label>Jours consommés</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>