hubSide/force-app/main/default/objects/Facture__c/fields/Nombre_jours_depassement__c.field-meta.xml
<CustomField>
    <fullName>Nombre_jours_depassement__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Nombre de jours hors formule</description>
    <label>Nombre de jours en dépassement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>