hubSide/force-app/main/default/objects/Facture__c/fields/Nombre_jours_disponibles__c.field-meta.xml
<CustomField>
    <fullName>Nombre_jours_disponibles__c</fullName>
    <formula>Nombre_jours_reportes__c + Nombre_jours_formule__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Jours disponibles sur la période</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>