hubSide/force-app/main/default/objects/Facture__c/fields/Nombre_jours_formule__c.field-meta.xml
<CustomField>
    <fullName>Nombre_jours_formule__c</fullName>
    <description>Nombre de jours de la formule souscrite.</description>
    <label>Nombre de jours formule</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>