hubSide/force-app/main/default/objects/Facture__c/fields/Nombre_jours_reportes__c.field-meta.xml
<CustomField>
    <fullName>Nombre_jours_reportes__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Nombre de jours restant de la facture précédente et reportés sur la facture actuelle</description>
    <label>Nombre de jours reportés</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>