hubSide/force-app/main/default/objects/Facture__c/fields/Nombre_jours_restants__c.field-meta.xml
<CustomField>
    <fullName>Nombre_jours_restants__c</fullName>
    <formula>IF(
    ( Nombre_jours_disponibles__c - Nombre_jours_consommes__c) &gt; 0,
    Nombre_jours_disponibles__c - Nombre_jours_consommes__c,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre de jours restants</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>