hubSide/force-app/main/default/objects/Facture__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Nombre_jours_restants__c</columns>
    <columns>Date_debut_periode__c</columns>
    <columns>Facture_active__c</columns>
    <columns>Contrat__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>